src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.canvas {
  background-color: #252934;
  height: 100%;
  left: 0;
  top: 0;
  position: absolute;
  width: 100vw;
}

.flex {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

.title {
  font-family: 'Raleway', sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.title h1 {
  font-size: 5em;
  margin: 0;
  color: #fff;
  z-index: 1;
}

.subTitle {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.subTitle h4 {
  font-size: 1.2em;
  color: #e31b6d;
  margin: 5px;
}

.learn {
  color: #fff;
  margin-top: 30px;
  padding: 12px 20px 12px 20px;
  border: 2px solid #fff;
  font-size: 16pt;
  cursor: pointer;
  box-sizing: inherit;
  display: inline-block;
  background-color: transparent;
  transition: all 0.5s;
  z-index: 1;
}

.learn:hover {
  background-color: #04c2c9;
  border-color: #04c2c9;
}

